--- a/3DMuseum/game.css
+++ b/3DMuseum/game.css
@@ -37,18 +37,25 @@ canvas{
 /* Menu Container */
 .menu-container {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    margin: 50%;
+    width: 50%;
+    height: 50%;
     background-color: rgba(255, 255, 255, 0.9);
     display: none; /* Hidden by default, shown by JS */
     flex-direction: column;
     align-items: center;
+    justify-self: center;
+    align-self: center;
     padding: 20px;
     box-sizing: border-box;
     z-index: 999;
     overflow-y: auto; /* Enable scrolling if content overflows */
+    background: rgba(36, 36, 36, 0.56);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    -webkit-backdrop-filter: blur(2.1px);
+    backdrop-filter: blur(2.1px);
+    border: 1px solid rgb(52, 50, 50);
 }
 
 .menu-container .flex {
