--- a/3DMuseum/game.css
+++ b/3DMuseum/game.css
@@ -353,12 +353,12 @@ canvas{
     justify-content: space-between;
     justify-items: auto;
     /* From https://css.glass */
-    background: rgba(132, 130, 130, 0.54);
+    background: rgba(62, 61, 61, 0.54);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     -webkit-backdrop-filter: blur(7.7px);
     backdrop-filter: blur(7.7px);
-    border: 1px solid rgba(132, 130, 130, 0.49);
+    border: 1px solid rgba(84, 83, 83, 0.49);
 }
 
 .CancelBtnContainer{
@@ -391,3 +391,9 @@ canvas{
     border-radius: 2%;
 }
 
+.TitleContainer {
+    font-weight: 800;
+}
+.BottomContainer{
+    font-weight: 500;
+}
