--- a/3DMuseum/game.css
+++ b/3DMuseum/game.css
@@ -340,3 +340,60 @@ canvas{
     min-width: 100px;
     border: 1px solid #fff;
 }
+
+.ImageShowContainer{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    scrollbar-width: none;
+    z-index: 1005;
+    justify-content: space-between;
+    justify-items: auto;
+    /* From https://css.glass */
+    background: rgba(132, 130, 130, 0.54);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    -webkit-backdrop-filter: blur(7.7px);
+    backdrop-filter: blur(7.7px);
+    border: 1px solid rgba(132, 130, 130, 0.49);
+}
+
+.CancelBtnContainer{
+    font-size: large;
+    font-weight: 700;
+    margin-left: -10px;
+}
+
+.display_image_closeBtn{
+    font-size: 2rem;
+    font-weight: 500;
+    color: orangered;
+}
+
+.Seperator{
+    border-radius: 20px;
+    height: 1px;
+    color: black;
+    background-color: black;
+}
+
+ .SecondCol{
+    border: 1.4px solid black;
+    border-radius: 5%;
+}
+
+
+.FirstCol img{
+    border: 8px solid rgb(6, 5, 5);
+    border-radius: 2%;
+}
+
+.TitleContainer {
+    font-weight: 800;
+}
+.BottomContainer{
+    font-weight: 500;
+}
